--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ nav,
 .dark-theme .nav__link--anchor,
 .dark-theme .fa-adjust,
 .dark-theme .header__para
+.dark-theme .header__description
 {
   color: rgb(232, 230, 227);
 }
@@ -743,3 +744,4 @@ footer {
     padding: 40px;
   }
 }
+
